--- a/4)jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/4)jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -68,11 +68,11 @@
      "text": [
       "Collecting sqlalchemy==1.3.9\n",
       "  Downloading SQLAlchemy-1.3.9.tar.gz (6.0 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m62.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m55.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
       "\u001b[?25hBuilding wheels for collected packages: sqlalchemy\n",
       "  Building wheel for sqlalchemy (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp37-cp37m-linux_x86_64.whl size=1159121 sha256=a95f9fa077e46d2b0975d6c7d5d385ba4bfeb35949ecab6712b421a6acafc831\n",
+      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp37-cp37m-linux_x86_64.whl size=1159121 sha256=35032435910b6e09d6b7af73e50feae5ac188e0f59615854bec292c8285e88a3\n",
       "  Stored in directory: /home/jupyterlab/.cache/pip/wheels/03/71/13/010faf12246f72dc76b4150e6e599d13a85b4435e06fb9e51f\n",
       "Successfully built sqlalchemy\n",
       "Installing collected packages: sqlalchemy\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -157,7 +157,7 @@
        "'Connected: @my_data1.db'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -207,18 +207,10 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///my_data1.db\n",
-      "Done.\n"
+      "(sqlite3.OperationalError) table SPACEXTABLE already exists\n",
+      "[SQL: create table SPACEXTABLE as select * from SPACEXTBL where Date is not null]\n",
+      "(Background on this error at: http://sqlalche.me/e/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1004,30 +996,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (2323241882.py, line 2)",
+     "evalue": "invalid syntax (1756593631.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_68/2323241882.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    where \"Date\" between '2010-06-04' and '2017-03-20' and Landing_Outcome LIKE '%Success%'\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_68/1756593631.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    where Date between '2010-06-04' and '2017-03-20' and Landing_Outcome LIKE '%Success%'\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "%sql select date, Landing_Outcome from SPACEXTBL \n",
-    "where \"Date\" between '2010-06-04' and '2017-03-20' and Landing_Outcome LIKE '%Success%' \n",
+    "where Date between '2010-06-04' and '2017-03-20' and Landing_Outcome LIKE '%Success%' \n",
     "GROUP BY Date \n",
     "ORDER BY COUNT(Landing_Outcome) DESC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -1037,76 +1029,15 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///my_data1.db\n",
-      "Done.\n"
+      "(sqlite3.OperationalError) no such column: Landing_Oucome\n",
+      "[SQL: SELECT \"Date\", Landing_Oucome, COUNT(Landing_Outcome) as COUNT FROM SPACEXTBL      WHERE \"Date\" BETWEEN '2010-06-04' and '2017-03-20' GROUP BY \"Date\" ORDER BY COUNT(Landing_Outcome) DESC]\n",
+      "(Background on this error at: http://sqlalche.me/e/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>Date</th>\n",
-       "            <th>COUNT</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>2017-02-19</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2017-01-14</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2016-08-14</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2016-07-18</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2016-05-27</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2016-05-06</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2016-04-08</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2015-12-22</td>\n",
-       "            <td>1</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('2017-02-19', 1),\n",
-       " ('2017-01-14', 1),\n",
-       " ('2016-08-14', 1),\n",
-       " ('2016-07-18', 1),\n",
-       " ('2016-05-27', 1),\n",
-       " ('2016-05-06', 1),\n",
-       " ('2016-04-08', 1),\n",
-       " ('2015-12-22', 1)]"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT \"Date\", COUNT(Landing_Outcome) as COUNT FROM SPACEXTBL \\\n",
-    "    WHERE \"Date\" BETWEEN '2010-06-04' and '2017-03-20' AND Landing_Outcome LIKE '%Success%' \\\n",
-    "    GROUP BY \"Date\" \\\n",
-    "    ORDER BY COUNT(Landing_Outcome) DESC"
+    "%sql SELECT \"Date\", Landing_Oucome, COUNT(Landing_Outcome) as COUNT FROM SPACEXTBL \\\n",
+    "    WHERE \"Date\" BETWEEN '2010-06-04' and '2017-03-20' GROUP BY \"Date\" ORDER BY COUNT(Landing_Outcome) DESC"
    ]
   },
   {
