--- a/4)jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/4)jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -996,30 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1756593631.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_68/1756593631.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    where Date between '2010-06-04' and '2017-03-20' and Landing_Outcome LIKE '%Success%'\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "%sql select date, Landing_Outcome from SPACEXTBL \n",
-    "where Date between '2010-06-04' and '2017-03-20' and Landing_Outcome LIKE '%Success%' \n",
-    "GROUP BY Date \n",
-    "ORDER BY COUNT(Landing_Outcome) DESC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -1029,15 +1006,83 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///my_data1.db\n",
-      "(sqlite3.OperationalError) no such column: Landing_Oucome\n",
-      "[SQL: SELECT \"Date\", Landing_Oucome, COUNT(Landing_Outcome) as COUNT FROM SPACEXTBL      WHERE \"Date\" BETWEEN '2010-06-04' and '2017-03-20' GROUP BY \"Date\" ORDER BY COUNT(Landing_Outcome) DESC]\n",
-      "(Background on this error at: http://sqlalche.me/e/e3q8)\n"
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Date</th>\n",
+       "            <th>Landing_Outcome</th>\n",
+       "            <th>COUNT</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>2012-05-22</td>\n",
+       "            <td>No attempt</td>\n",
+       "            <td>10</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2016-04-08</td>\n",
+       "            <td>Success (drone ship)</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2015-01-10</td>\n",
+       "            <td>Failure (drone ship)</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2015-12-22</td>\n",
+       "            <td>Success (ground pad)</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2014-04-18</td>\n",
+       "            <td>Controlled (ocean)</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2013-09-29</td>\n",
+       "            <td>Uncontrolled (ocean)</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2010-06-04</td>\n",
+       "            <td>Failure (parachute)</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2015-06-28</td>\n",
+       "            <td>Precluded (drone ship)</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('2012-05-22', 'No attempt', 10),\n",
+       " ('2016-04-08', 'Success (drone ship)', 5),\n",
+       " ('2015-01-10', 'Failure (drone ship)', 5),\n",
+       " ('2015-12-22', 'Success (ground pad)', 3),\n",
+       " ('2014-04-18', 'Controlled (ocean)', 3),\n",
+       " ('2013-09-29', 'Uncontrolled (ocean)', 2),\n",
+       " ('2010-06-04', 'Failure (parachute)', 2),\n",
+       " ('2015-06-28', 'Precluded (drone ship)', 1)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql SELECT \"Date\", Landing_Oucome, COUNT(Landing_Outcome) as COUNT FROM SPACEXTBL \\\n",
-    "    WHERE \"Date\" BETWEEN '2010-06-04' and '2017-03-20' GROUP BY \"Date\" ORDER BY COUNT(Landing_Outcome) DESC"
+    "%sql SELECT \"Date\", Landing_Outcome, COUNT(Landing_Outcome) as COUNT FROM SPACEXTBL \\\n",
+    "    WHERE \"Date\" BETWEEN '2010-06-04' and '2017-03-20' GROUP BY Landing_Outcome ORDER BY COUNT(Landing_Outcome) DESC"
    ]
   },
   {
